# geometric-algebra

./: LICENSE  geometric-algebra.cabal  stack.yaml
src/: Main.hs
src/Math/: GeometricAlgebra.hs  GeometricAlgebraGL.hs
